--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -100,8 +100,8 @@ p {
 }
 
 .loader {
-  width: 80vw;
-  height: 90vh;
+  width: 50px;
+  height: 50px;
   display: flex !important;
   margin: auto;
 }
